package entity;

// Interface Segregation Principle
public interface ICommentUpdater {
    public void updateComment(String comment);
}
